--- a/CHANGELOG.mb
+++ b/CHANGELOG.mb
@@ -1,5 +1,15 @@
+### 0.1.3
+* Documentation updates
+* Add `SimpleCommand::KlassTransform` rake task sandbox to test the following `SimpleCommand::KlassTransform` classes:
+  * `SimpleCommand::KlassTransform#to_class_string`
+    * $ rake to_class_string 
+  * `SimpleCommand::KlassTransform#to_modules_string`
+    * $ rake to_modules_string 
+  * `SimpleCommand::KlassTransform#to_constantized_class_string`
+    * $ rake to_constantized_class_string 
+
 ### 0.1.2
-* documentation updates
+* Documentation updates
 
 ### 0.1.1
-* documentation updates
+* Documentation updates
