--- a/CHANGELOG.mb
+++ b/CHANGELOG.mb
@@ -1,3 +1,6 @@
+### 0.2.0
+* Add support for ruby version >= 2.2.2
+
 ### 0.1.3
 * Documentation updates
 * Add `SimpleCommand::KlassTransform` rake task sandbox to test the below listed `SimpleCommand::KlassTransform` members; run the rake tasks for usage; these rake tasks are simply a playground to see how simple_command_dispatcher transforms parameters into output when calling SimpleCommand::Dispatcher.call(...):
