--- a/CHANGELOG.mb
+++ b/CHANGELOG.mb
@@ -1,5 +1,8 @@
+### 1.0.0
+* Limit support to ruby >= 2.2.2
+
 ### 0.2.0
-* Add support for ruby version >= 2.2.2
+* Yanked
 
 ### 0.1.3
 * Documentation updates
