--- a/CHANGELOG.mb
+++ b/CHANGELOG.mb
@@ -6,27 +6,10 @@
 * Documentation updates
   * Add example code in README.md to include clarification on command namespacing, and how to autoload command classes to avoid NameError exceptions when SimpleCommand::Dispatcher.call(...) is call due to uninitialized command constants.
 
-### 1.1.0
-* Bug fix lib/core_extensions/string.rb not included in SimpleCommand::Dispatcher, causing exception.
-
-### 1.0.0
-* Limit support to ruby >= 2.2.2
-
-### 0.2.0
-* Yanked
-
-### 0.1.3
-* Documentation updates
-* Add `SimpleCommand::KlassTransform` rake task sandbox to test the below listed `SimpleCommand::KlassTransform` members; run the rake tasks for usage; these rake tasks are simply a playground to see how simple_command_dispatcher transforms parameters into output when calling SimpleCommand::Dispatcher.call(...):
-  * `SimpleCommand::KlassTransform#to_class_string`
-    * $ rake to_class_string 
-  * `SimpleCommand::KlassTransform#to_modules_string`
-    * $ rake to_modules_string 
-  * `SimpleCommand::KlassTransform#to_constantized_class_string`
-    * $ rake to_constantized_class_string 
-
-### 0.1.2
-* Documentation updates
-
-### 0.1.1
-* Documentation updates
+## 1.1.0 - 2016-11-01 [YANKED]
+## 1.0.0 - 2016-11-01 [YANKED]
+## 0.2.0 - 2016-11-01 [YANKED]
+## 0.1.3 - 2016-11-01 [YANKED]
+## 0.1.2 - 2016-10-29 [YANKED]
+## 0.1.1 - 2016-10-29 [YANKED]
+## 0.1.0 - 2016-10-29 [YANKED]
